refactor naming, define swag + update, comment auth middleware
